Latest CVS Changes 16/02/06
  - added progressive loading support for XMT and X3D files.
  - misc fixes in InputSensor handling.
  - misc fixes in SVG animation module (animation begin and end event, restarting of animations)
  - added 'define' support in BT - to use it just do:
     #define symbol blab labl a
    and reuse the symbol in the BT text. This may be quite buggy, but it can be usefull
  - misc fixes in XMT proto+script parsing
  - misc opts in software rasterizer
  - fixed support for Scene Carousel in hinters, core and rtp reassembler. Currently only BIFS and BIFS+AV can be use the scene carousel, carouseling of 
    static data (eg images) is not supported. The OD data must be embedded in the IOD a la ISMA.
  - added FPS and size info dumping for MPEG and AVI file import (MP4Box -info file.mpg)
  - many fixes in 3D renderer while checking the X3D conformance suite
  - moved XMT and X3D parsers to use SAX parser. Progressive loading still to be done.
  - fixed ISOMedia track duration in case of ctts table
  - fixed PAR issus at import time setting wrong track sizes for visual media.
  - misc opts in list access (some could be buggy).
  - fixed handling of 64-bit timing in GPAC (clients and MP4Box). Impacts on a few APIs (libisomedia, scene manager and terminal).
  - fixed bugs in BIFS RAP generation (BT and XMT-A loaders) 
  - added LASeR RAP generation
  - fixed support for node insert and delete in laser
  - fixed AVC import bug with multiple PPSs per stream
  - changed MPEG-4 SP -> AVI to add VOSH before each I-frame
  - fixed stts bug in file concatenation (first inserted sample had a wrong duration)
  - added partial support for lon UTF-8 sequences (only 2 bytes UTF8 cjaracters were supported)
  - initial commit of laser (encoder, decoder and decoder module). Far from behing complete or usable at this time, binary syntax not 100% safe ...
  - fixed v5 and v7 MPEG-4 node templates